fixing left spacing on contact page

--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -3,8 +3,15 @@
     .o-hero {
         padding-top: 60px;
 
+        &.-case-study {
+
+            @include breakpoints("desktop") {
+                padding-top: 80px;
+            }
+        }
+
         @include breakpoints("desktop") {
-            padding-top: 80px;
+            padding-top: 180px;
         }
 
         &__titles {
